update readme and title

--- a/title/title.toml
+++ b/title/title.toml
@@ -1,1 +1,1 @@
-title = "Modelling pollution in the urban environment using neural networks"
+title = "Modelling pollution in the urban environment using neural networks."
